function added / style reworked

--- a/style.css
+++ b/style.css
@@ -36,3 +36,18 @@ body {
 .bg-danger {
   color: white !important;
 }
+
+.width-100 {
+  width: 100%;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.button-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 16px;
+}
